--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_screenutil: ^5.9.3
   get: ^4.6.6
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
