--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   get: ^4.6.6
   image_picker: ^1.1.2
+  pinput: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +70,12 @@ flutter:
       - assets/images/Illustration.png
       - assets/images/home.png
       - assets/images/circle.png
+      - assets/images/man.png
+      - assets/images/Ellipse.png
+      - assets/images/Ellipse1.png
+      - assets/images/Ellipse3.png
+      - assets/images/lock.png
+      - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
