--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_picker: ^1.1.2
   pinput: ^5.0.0
   intl: ^0.19.0
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
