--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   pinput: ^5.0.0
   intl: ^0.19.0
   flutter_rating_bar: ^4.0.1
+  flutter_date_pickers: ^0.4.3
+  table_calendar: ^3.1.2
 
 dev_dependencies:
   flutter_test:
