--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,13 +37,18 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_screenutil: ^5.9.3
   get: ^4.6.6
-  image_picker: ^1.1.2
+  image_picker: ^0.8.4+8
   pinput: ^5.0.0
   intl: ^0.19.0
   flutter_rating_bar: ^4.0.1
   flutter_date_pickers: ^0.4.3
   table_calendar: ^3.1.2
-
+  flutter_svg: ^2.0.10+1
+  dotted_border: ^2.1.0
+  file_picker: ^8.1.2
+  image_cropper: ^8.0.2
+  wolt_modal_sheet: ^0.9.3
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
