--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
+  cupertino_icons: ^1.0.8
   flutter_screenutil: ^5.9.3
   get: ^4.6.6
   image_picker: ^0.8.4+8
@@ -48,6 +48,7 @@ dependencies:
   file_picker: ^8.1.2
   image_cropper: ^8.0.2
   wolt_modal_sheet: ^0.9.3
+  dio: ^5.7.0
   
 dev_dependencies:
   flutter_test:
